[tool.poetry]
name = "gse"
version = "0.1.0"
description = ""
authors = ["alexfirssoff <a.a.firssoff@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.3.4"
pandas = "^2.3.3"
matplotlib = "^3.10.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
